language/move-lang/tests/move_check/expansion/standalone_name_with_type_args.exp
error: 

   ┌── tests/move_check/expansion/standalone_name_with_type_args.move:3:23 ───
   │
 3 │         let _ = n<u64>;
   │                       ^ Unexpected token: ';'
   ·
 3 │         let _ = n<u64>;
   │                       - Expected: '{', '('
   │

